@@ -9,29 +9,31 @@ import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.fit2cloud.base.entity.CloudAccount;
 import com.fit2cloud.base.entity.VmCloudHost;
 import com.fit2cloud.base.service.IBaseCloudAccountService;
+import com.fit2cloud.base.service.IBaseOrganizationService;
 import com.fit2cloud.base.service.IBaseVmCloudHostService;
+import com.fit2cloud.base.service.IBaseWorkspaceService;
 import com.fit2cloud.common.es.constants.IndexConstants;
 import com.fit2cloud.common.log.utils.LogUtil;
 import com.fit2cloud.common.provider.entity.F2CEntityType;
-import com.fit2cloud.common.utils.*;
+import com.fit2cloud.common.utils.ColumnNameUtil;
+import com.fit2cloud.common.utils.PageUtil;
+import com.fit2cloud.common.utils.QueryUtil;
 import com.fit2cloud.controller.request.server.PageServerRequest;
 import com.fit2cloud.controller.request.server.ResourceAnalysisRequest;
+import com.fit2cloud.controller.response.BarTreeChartData;
 import com.fit2cloud.controller.response.ChartData;
-import com.fit2cloud.dao.mapper.VmCloudServerMapper;
+import com.fit2cloud.dao.mapper.AnalyticsServerMapper;
+import com.fit2cloud.dto.AnalyticsServerDTO;
 import com.fit2cloud.dto.KeyValue;
-import com.fit2cloud.dto.VmCloudDiskDTO;
-import com.fit2cloud.dto.VmCloudServerDTO;
 import com.fit2cloud.es.entity.PerfMetricMonitorData;
+import com.fit2cloud.service.IBaseResourceAnalysisService;
 import com.fit2cloud.service.IServerAnalysisService;
 import com.fit2cloud.utils.OperationUtils;
 import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.elasticsearch.search.aggregations.bucket.terms.StringTerms;
-import org.elasticsearch.search.aggregations.bucket.terms.TermsAggregator;
+import org.springframework.beans.BeanUtils;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
-import org.springframework.data.elasticsearch.client.elc.ElasticsearchAggregation;
-import org.springframework.data.elasticsearch.client.elc.ElasticsearchAggregations;
 import org.springframework.data.elasticsearch.client.elc.ElasticsearchTemplate;
 import org.springframework.data.elasticsearch.client.elc.NativeQueryBuilder;
 import org.springframework.data.elasticsearch.core.SearchHit;
@@ -49,42 +51,49 @@ import java.util.stream.Collectors;
 
 /**
  * @author jianneng
- * @date 2022/12/24 11:29
+ * {@code @date} 2022/12/24 11:29
  **/
 @Service
 public class ServerAnalysisService implements IServerAnalysisService {
 
     @Resource
-    private VmCloudServerMapper vmCloudServerMapper;
+    private AnalyticsServerMapper analyticsServerMapper;
     @Resource
     private IBaseCloudAccountService iBaseCloudAccountService;
     @Resource
     private IBaseVmCloudHostService iBaseVmCloudHostService;
     @Resource
     private ElasticsearchTemplate elasticsearchTemplate;
+
+    @Resource
+    private IBaseWorkspaceService iBaseWorkspaceService;
+    @Resource
+    private IBaseOrganizationService iBaseOrganizationService;
+
+    @Resource
+    private IBaseResourceAnalysisService iBaseResourceAnalysisService;
     @Override
-    public IPage<VmCloudServerDTO> pageServer(PageServerRequest request) {
-        Page<VmCloudServerDTO> page = PageUtil.of(request, VmCloudServerDTO.class, new OrderItem(ColumnNameUtil.getColumnName(VmCloudServerDTO::getCreateTime, true), false), true);
+    public IPage<AnalyticsServerDTO> pageServer(PageServerRequest request) {
+        Page<AnalyticsServerDTO> page = PageUtil.of(request, AnalyticsServerDTO.class, new OrderItem(ColumnNameUtil.getColumnName(AnalyticsServerDTO::getCreateTime, true), false), true);
         // 构建查询参数
-        QueryWrapper<VmCloudServerDTO> wrapper = addServerQuery(request);
-        IPage<VmCloudServerDTO> result = vmCloudServerMapper.pageList(page, wrapper);
+        QueryWrapper<AnalyticsServerDTO> wrapper = addServerQuery(request);
+        IPage<AnalyticsServerDTO> result = analyticsServerMapper.pageList(page, wrapper);
         //设置监控数据
         getVmPerfMetric(result.getRecords());
         return result;
     }
-    private QueryWrapper<VmCloudServerDTO> addServerQuery(PageServerRequest request) {
-        QueryWrapper<VmCloudServerDTO> wrapper = new QueryWrapper<>();
-        wrapper.like(StringUtils.isNotBlank(request.getName()), ColumnNameUtil.getColumnName(VmCloudServerDTO::getInstanceName,true), request.getName());
-        wrapper.in(CollectionUtils.isNotEmpty(request.getAccountIds()), ColumnNameUtil.getColumnName(VmCloudServerDTO::getAccountId, true), request.getAccountIds());
-        wrapper.notIn(true,ColumnNameUtil.getColumnName(VmCloudServerDTO::getInstanceStatus, true), Arrays.asList("Deleted"));
+    private QueryWrapper<AnalyticsServerDTO> addServerQuery(PageServerRequest request) {
+        QueryWrapper<AnalyticsServerDTO> wrapper = new QueryWrapper<>();
+        wrapper.like(StringUtils.isNotBlank(request.getName()), ColumnNameUtil.getColumnName(AnalyticsServerDTO::getInstanceName,true), request.getName());
+        wrapper.in(CollectionUtils.isNotEmpty(request.getAccountIds()), ColumnNameUtil.getColumnName(AnalyticsServerDTO::getAccountId, true), request.getAccountIds());
+        wrapper.notIn(true,ColumnNameUtil.getColumnName(AnalyticsServerDTO::getInstanceStatus, true), List.of("Deleted"));
         return wrapper;
     }
 
     @Override
     public List<CloudAccount> getAllCloudAccount() {
         QueryWrapper<CloudAccount> queryWrapper = new QueryWrapper<>();
-        List<CloudAccount> accountList = iBaseCloudAccountService.list(queryWrapper);
-        return accountList;
+        return iBaseCloudAccountService.list(queryWrapper);
     }
 
     private void allCloudAccount(ResourceAnalysisRequest request) {
@@ -102,87 +111,91 @@ public class ServerAnalysisService implements IServerAnalysisService {
     }
 
     @Override
+    public Map<String,CloudAccount> getAllAccountIdMap(){
+        List<CloudAccount> accountList = getAllCloudAccount();
+        return accountList.stream().collect(Collectors.toMap(CloudAccount::getId,v->v,(k1,k2)->k1));
+    }
+
+
+    @Override
     public List<ChartData> vmIncreaseTrend(ResourceAnalysisRequest request){
         List<ChartData> tempChartDataList = new ArrayList<>();
-        List<CloudAccount> accountList = getAllCloudAccount();
-        Map<String,CloudAccount> accountMap = accountList.stream().collect(Collectors.toMap(CloudAccount::getId,v->v,(k1,k2)->k1));
-        if(accountMap.size()==0){
-            return tempChartDataList;
-        }
-        QueryWrapper<VmCloudServerDTO> queryWrapper = new QueryWrapper<>();
-        queryWrapper.in(CollectionUtils.isNotEmpty(request.getAccountIds()),ColumnNameUtil.getColumnName(VmCloudServerDTO::getAccountId,true),request.getAccountIds());
-        queryWrapper.in(CollectionUtils.isNotEmpty(request.getHostIds()),ColumnNameUtil.getColumnName(VmCloudServerDTO::getHostId,true),getVmHostIds(request));
-        queryWrapper.ge(true,ColumnNameUtil.getColumnName(VmCloudServerDTO::getCreateTime,true),LocalDateTime.now().minusMonths(request.getMonthNumber()));
-        List<VmCloudServerDTO> vmList = vmCloudServerMapper.list(queryWrapper);
-        if(CollectionUtils.isNotEmpty(vmList)){
-            Map<String,List<VmCloudServerDTO>> accountGroup = vmList.stream().collect(Collectors.groupingBy(VmCloudServerDTO::getAccountId));
-            accountGroup.keySet().forEach(accountId->{
-                Map<String,Long> month = accountGroup.get(accountId).stream().collect(Collectors.groupingBy(VmCloudServerDTO::getCreateMonth, Collectors.counting()));
-                month.keySet().forEach(k->{
-                    ChartData chartData = new ChartData();
-                    chartData.setXAxis(k);
-                    chartData.setGroupName(accountGroup.get(accountId).get(0).getAccountName());
-                    chartData.setYAxis(new BigDecimal(month.get(k)));
-                    tempChartDataList.add(chartData);
-                });
-            });
+        Map<String,CloudAccount> accountMap = getAllAccountIdMap();
+        if (accountMap.size() != 0) {
+            QueryWrapper<AnalyticsServerDTO> queryWrapper = new QueryWrapper<>();
+            queryWrapper.in(CollectionUtils.isNotEmpty(request.getAccountIds()), ColumnNameUtil.getColumnName(AnalyticsServerDTO::getAccountId, true), request.getAccountIds());
+            queryWrapper.in(CollectionUtils.isNotEmpty(request.getHostIds()), ColumnNameUtil.getColumnName(AnalyticsServerDTO::getHostId, true), request.getHostIds());
+            queryWrapper.ge(true, ColumnNameUtil.getColumnName(AnalyticsServerDTO::getCreateTime, true), LocalDateTime.now().minusDays(request.getDayNumber()));
+            List<AnalyticsServerDTO> vmList = analyticsServerMapper.list(queryWrapper);
+            if (CollectionUtils.isNotEmpty(vmList)) {
+                if (CollectionUtils.isNotEmpty(request.getHostIds())) {
+                    Map<String, List<AnalyticsServerDTO>> hostGroup = vmList.stream().collect(Collectors.groupingBy(ServerAnalysisService::buildKey));
+                    hostGroup.keySet().forEach(hostId -> {
+                        Map<String, Long> month = hostGroup.get(hostId).stream().collect(Collectors.groupingBy(AnalyticsServerDTO::getCreateMonth, Collectors.counting()));
+                        month.keySet().forEach(k -> {
+                            ChartData chartData = new ChartData();
+                            chartData.setXAxis(k);
+                            chartData.setGroupName(hostGroup.get(hostId).get(0).getHost() + "(" + hostGroup.get(hostId).get(0).getAccountName() + ")");
+                            chartData.setYAxis(new BigDecimal(month.get(k)));
+                            tempChartDataList.add(chartData);
+                        });
+                    });
+                } else {
+                    Map<String, List<AnalyticsServerDTO>> accountGroup = vmList.stream().collect(Collectors.groupingBy(AnalyticsServerDTO::getAccountId));
+                    accountGroup.keySet().forEach(accountId -> {
+                        Map<String, Long> month = accountGroup.get(accountId).stream().collect(Collectors.groupingBy(AnalyticsServerDTO::getCreateMonth, Collectors.counting()));
+                        month.keySet().forEach(k -> {
+                            ChartData chartData = new ChartData();
+                            chartData.setXAxis(k);
+                            chartData.setGroupName(accountGroup.get(accountId).get(0).getAccountName());
+                            chartData.setYAxis(new BigDecimal(month.get(k)));
+                            tempChartDataList.add(chartData);
+                        });
+                    });
+                }
+            }
         }
         return tempChartDataList;
+    }
+
+    public static String buildKey(AnalyticsServerDTO serverDTO) {
+        return serverDTO.getAccountId() + "#" + serverDTO.getHostId();
     }
 
     @Override
     public Map<String,List<KeyValue>> spread(ResourceAnalysisRequest request){
         Map<String,List<KeyValue>> result = new HashMap<>();
-        List<CloudAccount> accountList = getAllCloudAccount();
-        Map<String,CloudAccount> accountMap = accountList.stream().collect(Collectors.toMap(CloudAccount::getId,v->v,(k1,k2)->k1));
+        Map<String,CloudAccount> accountMap = getAllAccountIdMap();
         if(accountMap.size()==0){
             return result;
         }
-        QueryWrapper<VmCloudServerDTO> queryWrapper = new QueryWrapper<>();
-        queryWrapper.in(CollectionUtils.isNotEmpty(request.getAccountIds()),ColumnNameUtil.getColumnName(VmCloudServerDTO::getAccountId,true),request.getAccountIds());
-        queryWrapper.in(CollectionUtils.isNotEmpty(request.getHostIds()),ColumnNameUtil.getColumnName(VmCloudServerDTO::getHostId,true),getVmHostIds(request));
+        QueryWrapper<AnalyticsServerDTO> queryWrapper = new QueryWrapper<>();
+        queryWrapper.in(CollectionUtils.isNotEmpty(request.getAccountIds()),ColumnNameUtil.getColumnName(AnalyticsServerDTO::getAccountId,true),request.getAccountIds());
+        queryWrapper.in(CollectionUtils.isNotEmpty(request.getHostIds()),ColumnNameUtil.getColumnName(AnalyticsServerDTO::getHostId,true),request.getHostIds());
         //只统计开关机的
-        queryWrapper.in(true,ColumnNameUtil.getColumnName(VmCloudServerDTO::getInstanceStatus,true), Arrays.asList("Running","Stopped"));
-        List<VmCloudServerDTO> vmList = vmCloudServerMapper.list(queryWrapper);
-        Map<String,Long> byAccountMap = vmList.stream().filter(v->StringUtils.isNotEmpty(v.getAccountId())).collect(Collectors.groupingBy(VmCloudServerDTO::getAccountId, Collectors.counting()));
+        queryWrapper.in(true,ColumnNameUtil.getColumnName(AnalyticsServerDTO::getInstanceStatus,true), Arrays.asList("Running","Stopped"));
+        List<AnalyticsServerDTO> vmList = analyticsServerMapper.list(queryWrapper);
+        Map<String,Long> byAccountMap = vmList.stream().filter(v->StringUtils.isNotEmpty(v.getAccountId())).collect(Collectors.groupingBy(AnalyticsServerDTO::getAccountId, Collectors.counting()));
         result.put("byAccount",byAccountMap.entrySet().stream().map(c -> new KeyValue(StringUtils.isEmpty(accountMap.get(c.getKey()).getName())?c.getKey():accountMap.get(c.getKey()).getName(), c.getValue()) {}).collect(Collectors.toList()));
         Map<String,String> statusMap = new HashMap<>();
         statusMap.put("Running","运行中");
         statusMap.put("Stopped","已停止");
-        Map<String,Long> byStatusMap = vmList.stream().collect(Collectors.groupingBy(VmCloudServerDTO::getInstanceStatus, Collectors.counting()));
+        Map<String,Long> byStatusMap = vmList.stream().collect(Collectors.groupingBy(AnalyticsServerDTO::getInstanceStatus, Collectors.counting()));
         result.put("byStatus",byStatusMap.entrySet().stream().map(c -> new KeyValue(statusMap.get(c.getKey()), c.getValue()) {}).collect(Collectors.toList()));
         Map<String,String> chargeTypeMap = new HashMap<>();
         chargeTypeMap.put("PostPaid","按需按量");
         chargeTypeMap.put("PrePaid","包年包月");
         chargeTypeMap.put("SpotPaid","竞价");
-        Map<String,Long> byChargeTypeMap = vmList.stream().filter(v->StringUtils.isNotEmpty(v.getInstanceChargeType())).collect(Collectors.groupingBy(VmCloudServerDTO::getInstanceChargeType, Collectors.counting()));
+        Map<String,Long> byChargeTypeMap = vmList.stream().filter(v->StringUtils.isNotEmpty(v.getInstanceChargeType())).collect(Collectors.groupingBy(AnalyticsServerDTO::getInstanceChargeType, Collectors.counting()));
         result.put("byChargeType",byChargeTypeMap.entrySet().stream().map(c -> new KeyValue(chargeTypeMap.get(c.getKey()), c.getValue()) {}).collect(Collectors.toList()));
         return result;
     }
 
-    private List<String> getVmHostIds(ResourceAnalysisRequest request){
-        List<String> resourceIds = new ArrayList<>();
-        try{
-            QueryWrapper<VmCloudHost> queryHostWrapper = new QueryWrapper<>();
-            queryHostWrapper.in(CollectionUtils.isNotEmpty(request.getAccountIds()),ColumnNameUtil.getColumnName(VmCloudHost::getAccountId,true),request.getAccountIds());
-            queryHostWrapper.in(CollectionUtils.isNotEmpty(request.getHostIds()),ColumnNameUtil.getColumnName(VmCloudHost::getId,true),request.getHostIds());
-            List<VmCloudHost> vmCloudHosts = iBaseVmCloudHostService.list(queryHostWrapper);
-            if(CollectionUtils.isNotEmpty(vmCloudHosts)){
-                resourceIds = vmCloudHosts.stream().map(VmCloudHost::getHostId).collect(Collectors.toList());
-            }
-        }catch (Exception e){
-            e.printStackTrace();
-        }
-        return CollectionUtils.isEmpty(resourceIds)?request.getHostIds():resourceIds;
-    }
-
-
     /**
      * 获取虚拟机最近一次的监控数据 CPU、内存
-     * @param list
+     * @param list 每页查询的虚拟机数据
      */
-    private void getVmPerfMetric(List<VmCloudServerDTO> list){
-        List<String> resourceId = list.stream().map(VmCloudServerDTO::getInstanceUuid).collect(Collectors.toList());
+    private void getVmPerfMetric(List<AnalyticsServerDTO> list){
         list.forEach(vm->{
             String findKey = vm.getAccountId()+"@"+vm.getInstanceUuid();
             //查询虚拟机最新一次监控数据，仅有一条
@@ -243,45 +256,7 @@ public class ServerAnalysisService implements IServerAnalysisService {
         try {
             request.setIntervalPosition(intervalUnit);
             SearchHits<PerfMetricMonitorData> response = elasticsearchTemplate.search(getSearchResourceTrendDataQuery(request), PerfMetricMonitorData.class, IndexCoordinates.of(IndexConstants.CE_PERF_METRIC_MONITOR_DATA.getCode()));
-            ElasticsearchAggregations aggregations = (ElasticsearchAggregations) response.getAggregations();
-            ElasticsearchAggregation aggregation = (ElasticsearchAggregation)aggregations.aggregations().get(0);
-            List<DateHistogramBucket> dateHistogramBucketList = aggregation.aggregation().getAggregate().dateHistogram().buckets().array();
-            Map<String,Map<String,Long>> groupDateAndRange = new HashMap<>();
-            //时间
-            dateHistogramBucketList.forEach(dateHistogramBucket->{
-                Arrays.asList(0,20,40,60,80).stream().forEach(interval->{
-                    String rangeKey = interval+"~"+(interval+20)+"%";
-                    String key = dateHistogramBucket.key()+"-"+rangeKey;
-                    Map<String,Long> map = new HashMap<>();
-                    map.put(rangeKey,0L);
-                    if(!groupDateAndRange.containsKey(key)){
-                        List<StringTermsBucket> averageRanges = dateHistogramBucket.aggregations().get("instanceIds").sterms().buckets().array();
-                        if(CollectionUtils.isNotEmpty(averageRanges)){
-                            Long count = 0L;
-                            //资源时间段内平均值
-                            for(StringTermsBucket termsBucket:averageRanges){
-                                double avgValue = termsBucket.aggregations().get("average").max().value();
-                                //在区间里面
-                                if(avgValue>interval && avgValue<(interval+20)){
-                                    count++;
-                                }
-                            }
-                            map.put(rangeKey,count);
-                        }
-                    }
-                    groupDateAndRange.put(key,map);
-                });
-            });
-            groupDateAndRange.keySet().forEach(k->{
-                Map<String,Long> map = groupDateAndRange.get(k);
-                map.keySet().forEach(r->{
-                    ChartData chartData = new ChartData();
-                    chartData.setXAxis(OperationUtils.getTimeFormat(DateUtil.dateToString(Long.valueOf(k.split("-")[0]),null),intervalUnit));
-                    chartData.setGroupName(r);
-                    chartData.setYAxis(new BigDecimal(map.get(r)));
-                    result.add(chartData);
-                });
-            });
+            result = iBaseResourceAnalysisService.convertToTrendData(response,intervalUnit);
         }catch (Exception e){
             e.printStackTrace();
             LogUtil.error("获取云主机资源使用趋势异常:"+e.getMessage());
@@ -305,19 +280,136 @@ public class ServerAnalysisService implements IServerAnalysisService {
             queryConditions.add(accountId);
         }
         if(CollectionUtils.isNotEmpty(request.getHostIds())){
-            QueryUtil.QueryCondition accountId = new QueryUtil.QueryCondition(true, "hostId.keyword", getVmHostIds(request), QueryUtil.CompareType.IN);
+            QueryUtil.QueryCondition accountId = new QueryUtil.QueryCondition(true, "hostId.keyword", request.getHostIds(), QueryUtil.CompareType.IN);
             queryConditions.add(accountId);
         }
-        BoolQuery.Builder boolQuery = QueryUtil.getQuery(queryConditions);
-        NativeQueryBuilder query = new NativeQueryBuilder()
-                .withPageable(PageRequest.of(0, 1))
-                .withQuery(new co.elastic.clients.elasticsearch._types.query_dsl.Query.Builder().bool(boolQuery.build()).build())
-                .withSourceFilter(new FetchSourceFilter(new String[]{}, new String[]{"@version", "@timestamp", "host", "tags"}))
-                .withAggregation("timestamp",new Aggregation.Builder().dateHistogram(new DateHistogramAggregation.Builder().field("timestamp").calendarInterval(request.getIntervalPosition()).build())
-                        .aggregations("instanceIds",new Aggregation.Builder().terms(new TermsAggregation.Builder().field("instanceId.keyword").size(Integer.MAX_VALUE).build())
-                        .aggregations("average",new Aggregation.Builder().max(new MaxAggregation.Builder().field("average").build()).build()).build()).build())
-                ;
-        return query.build();
+        return iBaseResourceAnalysisService.getRangeQuery(queryConditions, request.getIntervalPosition());
+    }
+
+    public Map<String,List<BarTreeChartData>> analyticsVmCloudServerByOrgWorkspace(ResourceAnalysisRequest request){
+        Map<String,List<BarTreeChartData>> result = new HashMap<>();
+        List<BarTreeChartData> workspaceList = workspaceSpread(request);
+        if(request.isAnalysisWorkspace()){
+            result.put("all",workspaceList);
+            result.put("tree",workspaceList);
+        }else{
+            result = orgSpread(request,workspaceList);
+        }
+        return result;
+    }
+
+    private Map<String,List<BarTreeChartData>> orgSpread(ResourceAnalysisRequest request, List<BarTreeChartData> workspaceList){
+        Map<String,List<BarTreeChartData>> result = new HashMap<>();
+        //组织下工作空间添加标识
+        workspaceList = workspaceList.stream().peek(v->{v.setName(v.getName()+"(工作空间)");}).collect(Collectors.toList());
+        //工作空间按照父级ID分组
+        Map<String,List<BarTreeChartData>> workspaceMap = workspaceList.stream().collect(Collectors.groupingBy(BarTreeChartData::getPId));
+        //查询所有组织，初始化为chart数据
+        List<BarTreeChartData> orgList = initOrgChartData();
+        //查询组织授权数据
+        QueryWrapper<AnalyticsServerDTO> orgWrapper =new QueryWrapper<>();
+        orgWrapper.eq("org_workspace.type","org");
+        orgWrapper.ne(ColumnNameUtil.getColumnName(AnalyticsServerDTO::getInstanceStatus,true),"Deleted");
+        orgWrapper.in(CollectionUtils.isNotEmpty(request.getHostIds()), ColumnNameUtil.getColumnName(AnalyticsServerDTO::getHostId, true), request.getHostIds());
+        orgWrapper.in(CollectionUtils.isNotEmpty(request.getAccountIds()), ColumnNameUtil.getColumnName(AnalyticsServerDTO::getAccountId, true), request.getAccountIds());
+        orgWrapper.groupBy(true,Arrays.asList("org_workspace.id","org_workspace.name"));
+        List<BarTreeChartData> list = analyticsServerMapper.analyticsVmCloudServerByOrgWorkspace(orgWrapper);
+        OperationUtils.initOrgWorkspaceAnalyticsData(orgList,list);
+        //初始化子级
+        orgList.forEach(v->{
+            OperationUtils.setSelfToChildren(v);
+            OperationUtils.workspaceToOrgChildren(workspaceMap, v);
+        });
+        orgList.sort((o1,o2)->o2.getValue().compareTo(o1.getValue()));
+        //扁平数据
+        result.put("all",orgList);
+        //树结构
+        List<BarTreeChartData> chartDataList = new ArrayList<>();
+        orgList.stream().filter(o->StringUtils.isEmpty(o.getPId())).forEach(v->{
+            v.setGroupName("org");
+            v.setName(v.getName()+"(组织)");
+            v.getChildren().addAll(getChildren(v,orgList,workspaceMap));
+            chartDataList.add(v);
+        });
+        chartDataList.sort((o1,o2)->o2.getValue().compareTo(o1.getValue()));
+        result.put("tree",chartDataList);
+        return result;
+    }
+
+    /**
+     * 工作空间分布
+     * @param request 云主机分析查询条件
+     * @return List<BarTreeChartData>
+     */
+    private List<BarTreeChartData> workspaceSpread(ResourceAnalysisRequest request){
+        QueryWrapper<AnalyticsServerDTO> wrapper = new QueryWrapper<>();
+        wrapper.eq("org_workspace.type","workspace");
+        wrapper.ne(ColumnNameUtil.getColumnName(AnalyticsServerDTO::getInstanceStatus,true),"Deleted");
+        wrapper.in(CollectionUtils.isNotEmpty(request.getHostIds()), ColumnNameUtil.getColumnName(AnalyticsServerDTO::getHostId, true), request.getHostIds());
+        wrapper.in(CollectionUtils.isNotEmpty(request.getAccountIds()), ColumnNameUtil.getColumnName(AnalyticsServerDTO::getAccountId, true), request.getAccountIds());
+        wrapper.groupBy(true,Arrays.asList("org_workspace.id","org_workspace.name"));
+        List<BarTreeChartData> chartDateWorkspaceList = analyticsServerMapper.analyticsVmCloudServerByOrgWorkspace(wrapper);
+        List<BarTreeChartData> workspaceList = initWorkspaceChartData();
+        OperationUtils.initOrgWorkspaceAnalyticsData(workspaceList,chartDateWorkspaceList);
+        workspaceList.sort((o1,o2)->o2.getValue().compareTo(o1.getValue()));
+        return workspaceList;
+    }
+
+    /**
+     * 初始化工作空间柱状图数据
+     * @return List<BarTreeChartData>
+     */
+    @Override
+    public List<BarTreeChartData> initWorkspaceChartData(){
+        return iBaseWorkspaceService.list().stream().map(v->{
+            BarTreeChartData barTreeChartData = new BarTreeChartData();
+            barTreeChartData.setId(v.getId());
+            barTreeChartData.setName(v.getName());
+            barTreeChartData.setValue(0L);
+            barTreeChartData.setPId(v.getOrganizationId());
+            return barTreeChartData;
+        }).collect(Collectors.toList());
+    }
+
+    /**
+     * 初始化工作空间柱状图数据
+     * @return List<BarTreeChartData>
+     */
+    @Override
+    public List<BarTreeChartData> initOrgChartData(){
+        return iBaseOrganizationService.list().stream().map(v->{
+            BarTreeChartData barTreeChartData = new BarTreeChartData();
+            barTreeChartData.setId(v.getId());
+            barTreeChartData.setName(v.getName());
+            barTreeChartData.setValue(0L);
+            barTreeChartData.setPId(v.getPid());
+            barTreeChartData.setChildren(new ArrayList<>());
+            return barTreeChartData;
+        }).collect(Collectors.toList());
+    }
+
+    /**
+     * 递归获取子级
+     * @param barTreeChartData 父级
+     * @param list 子级
+     * @param workspaceMap 工作空间按组织ID分组
+     * @return List<BarTreeChartData>
+     */
+    @Override
+    public List<BarTreeChartData> getChildren(BarTreeChartData barTreeChartData,List<BarTreeChartData> list,Map<String,List<BarTreeChartData>> workspaceMap) {
+        //子级排序
+        return list.stream().filter(u -> Objects.equals(u.getPId(), barTreeChartData.getId())).peek(
+                u -> {
+                    //OperationUtils.setSelfToChildren(u);
+                    u.setName(u.getName() + "(子组织)");
+                    // 用于区分组织与工作空间
+                    u.setGroupName("org");
+                    u.getChildren().addAll(getChildren(u, list, workspaceMap));
+                    OperationUtils.workspaceToOrgChildren(workspaceMap, u);
+                    //父级数量加上子级数量作为父级总量
+                    barTreeChartData.setValue(barTreeChartData.getValue() + u.getValue());
+                }
+        ).sorted((o1, o2) -> o2.getValue().compareTo(o1.getValue())).collect(Collectors.toList());
     }
 
 }
